--- a/memory-game-ui/src/app/auth/register/register.scss
+++ b/memory-game-ui/src/app/auth/register/register.scss
@@ -3,13 +3,46 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(to right, #2196f3, #21cbf3);
+  background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+  position: relative;
+  overflow: hidden;
+}
+
+.floating-emoji {
+  position: absolute;
+  top: 100%;
+  font-size: 2.5rem;
+  opacity: 0.7;
+  animation-name: floatUp;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes floatUp {
+  0% {
+    transform: translateY(0) rotate(10deg);
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(-120vh) rotate(360deg);
+    opacity: 0;
+  }
 }
 
 .auth-card {
-  width: 350px;
+  position: relative;
+  z-index: 2;
+  width: 400px;
   padding: 20px;
   text-align: center;
+  border-radius: 15px;
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
+  background: rgba(255, 255, 255, 0.95);
 }
 
 .full-width {
@@ -17,8 +50,33 @@
   margin-bottom: 15px;
 }
 
+button.mat-raised-button {
+  font-weight: bold;
+  padding: 10px;
+}
+
 .message {
   margin: 10px 0;
   color: red;
   font-weight: 500;
+}
+
+a {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+
+a:hover {
+  text-decoration: undrline;
+  color: rgb(117, 117, 255);
+}
+
+h2 {
+  color: #6a11cb;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
