--- a/memory-game-ui/src/app/auth/login/login.scss
+++ b/memory-game-ui/src/app/auth/login/login.scss
@@ -23,7 +23,11 @@
     transform: translateY(0) rotate(10deg);
     opacity: 0;
   }
-  10% { opacity: 1; }
+
+  10% {
+    opacity: 1;
+  }
+
   100% {
     transform: translateY(-120vh) rotate(360deg);
     opacity: 0;
@@ -33,11 +37,11 @@
 .auth-card {
   position: relative;
   z-index: 2;
-  width: 350px;
-  padding: 30px 25px;
+  width: 400px;
+  padding: 20px;
   text-align: center;
   border-radius: 15px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
   background: rgba(255, 255, 255, 0.95);
 }
 
@@ -60,14 +64,19 @@ button.mat-raised-button {
 a {
   display: inline-block;
   margin-top: 10px;
-  color: #2575fc;
+  padding: 10px;
   text-decoration: none;
   font-weight: 500;
 }
 
+
 a:hover {
-  text-decoration: underline;
+  text-decoration: undrline;
+  color: rgb(117, 117, 255);
 }
+
 h2 {
- color: #6a11cb;
+  color: #6a11cb;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
